[tool.poetry]
name = "sketchbook"
version = "0.0.0"
description = "A template engine built for asyncio with async/await syntax support."
authors = ["Kaede Hoshikawa <futursolo@icloud.com>"]
license = "Apache-2.0"
readme = "README.rst"
repository = "https://github.com/futursolo/sketchbook"
homepage = "https://github.com/futursolo/sketchbook"

classifiers=[
  "Operating System :: MacOS",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Operating System :: Unix",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
]

include=["sketchbook/py.typed"]

[tool.poetry.dependencies]
python = "^3.8.0"
importlib-metadata = { version = "^4.0.1", python = "<=3.7" }

# Alternative I/O
curio = { version = "^1.5", optional = true }

# Async File I/O
aiofiles = { version = ">=0.6,<0.9", optional = true }

# Docs
sphinx = { version = "^4.1", optional = true }
sphinxcontrib-asyncio = { version = "^0.3.0", optional = true }
sphinx_rtd_theme = { version = "^1.0", optional = true }
sphinx-rtd-dark-mode = { version = "^1.2.4", optional = true }

[tool.poetry.dev-dependencies]
# Testing
pytest = "^7.1.1"
pytest-cov = "^3.0.0"

# Docs
sphinx = "^4.1"
sphinxcontrib-asyncio = "^0.3.0"
sphinx_rtd_theme = "^1.0"
sphinx-rtd-dark-mode = "^1.2.4"

# Sort imports
isort = { extras = ["pyproject"], version = "^5.10.1" }
flake8-isort = "^4.1.1"

# Auto formatting
black = "^22.3"
flake8-black = "^0.3.2"

# Typing
mypy = "^0.942"

# Linters
flake8 = "^4.0.1"

# Enforce docstring for public classes and functions
#flake8-docstrings = "^1.6.0"

# Enforce snake_case
pep8-naming = "^0.12.0"

# Version check
flake8-2020 = "^1.6.1"

# Detect potentially buggy functions
flake8-bugbear = "^22.3.23"

# No builtin names
flake8-builtins = "^1.5.3"

# No old style formatting
flake8-pep3101 = "^1.3.0"

# Simplify Logic
flake8-simplify = "^0.19.2"

# Dictionary
#flake8-spellcheck = "^0.24.0"

# Dynamic Versioning
poetry-dynamic-versioning = "^0.15.0"

# Types
types-aiofiles = "^0.8.6"

[tool.poetry.extras]
aiofiles = ["aiofiles"]
curio = ["curio"]
full = ["curio", "aiofiles"]
docs = ["curio", "aiofiles", "sphinx", "sphinxcontrib-asyncio", "sphinx_rtd_theme", "sphinx-rtd-dark-mode"]

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning<1"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 79
target-version = ['py36']

[tool.poetry-dynamic-versioning]
enable = true
metadata = false
vcs = "git"
style = "pep440"
bump = true
pattern = "(?x)^(?P<base>\\d+\\.\\d+\\.\\d+)(-?((?P<stage>[a-zA-Z]+)\\.?(?P<revision>\\d+)?))?(\\+(?P<tagged_metadata>.+))?$"

[tool.isort]
virtual_env = true
from_first = true
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 79

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = "tests/"
python_files = "test_*.py"
python_functions = "test_*"
python_classes = "*TestCase"
